--- a/Grafico/InicioSesion.form
+++ b/Grafico/InicioSesion.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="889" height="620"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="960" height="920"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="3a62e" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
