Cree Clase AgregarPlazoF y modifique el nombre de la clase ingreso a IngresoYGastos

--- a/Grafico/ConsultarMovimientos.form
+++ b/Grafico/ConsultarMovimientos.form
@@ -87,7 +87,9 @@
             <preferred-size width="83" height="34"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <model/>
+        </properties>
       </component>
       <component id="bc7f4" class="javax.swing.JList" binding="list1" default-binding="true">
         <constraints>
